update server service to use r53 mapper